[package]
name = "drop-swap"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
hyper = { version = "1", features = ["full"] }
tokio = { version = "1", features = ["full"] }
http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["full"] }
tokio-tungstenite = { version = "0.23.1", features = ["tokio-native-tls", "native-tls", "url"] }
tokio-native-tls = "0.3.1"
futures-util = "0.3.30"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
url = "2.5.1"
rand = "0.7.3"
hex = "0.4.2"
dotenv = "0.15.0"
reqwest = "0.11.27"

solana-program = "2.0.2"
solana-sdk = "2.0.2"
spl-token = "6.0.0"

solana-rpc-client-api = "2.0.2"
solana-rpc-client = "2.0.2"
borsh = "1.5.1"
slint = "1.6.0"
open = "5.3.0"
mpl-token-metadata = { version = "4.1.2", features = ["serde"]}
#spl-associated-token-account = "3.0.2"
#solana-transaction-status = "2.0.2"

[build-dependencies]
slint-build = "1.6.0"
